fixed bug on tablet view

--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -100,7 +100,7 @@
         width: 90px;
         text-align: center;
         margin-left: calc(100% - 110px);
-        margin-bottom: -45px;
+        margin-bottom: -25px;
     }
 
     .container {
